--- a/packages/async-math/package.json
+++ b/packages/async-math/package.json
@@ -3,7 +3,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "dev": "tsup src/index.ts --watch --dts --clean"
+    "dev": "tsup src/index.ts --watch --dts --clean",
+    "build": "tsup src/index.ts --dts --clean"
   },
   "devDependencies": {
     "mathjs": "^12.4.1"
