--- a/packages/tensor/package.json
+++ b/packages/tensor/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "lint-staged": "lint-staged",
     "test": "vitest",
-    "dev": "tsup src/index.ts --watch --dts --clean "
+    "dev": "tsup src/index.ts --watch --dts --clean",
+    "build": "tsup src/index.ts --dts --clean"
   },
   "dependencies": {
     "async-math": "workspace: *"
