--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "skipLibCheck": true
   },
   "include": [
-    "packages/*/src"
-  ]
+    "packages/*/src",
+    "packages/nn/src/module.ts"]
 }
