--- a/packages/tensor/package.json
+++ b/packages/tensor/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@mua/tensor",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "lint-staged": "lint-staged",
     "test": "vitest",
-    "dev": "tsup src/index.ts --watch --dts --clean",
-    "build": "tsup src/index.ts --dts --clean"
+    "dev": "tsup src/index.ts --watch --dts --clean --format cjs,esm",
+    "build": "tsup src/index.ts --dts --clean --format cjs,esm"
   },
   "dependencies": {
     "async-math": "workspace: *"
