--- a/apps/muajs/package.json
+++ b/apps/muajs/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@mua/nn",
+  "name": "muajs",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
     "lint-staged": "lint-staged",
-    "test": "vitest",
-    "dev": "tsup src/index.ts --watch --dts --clean --format cjs,esm",
-    "build": "tsup src/index.ts --dts --clean --format cjs,esm"
+    "dev": "tsup index.ts --watch --dts --clean --format cjs,esm",
+    "build": "tsup index.ts --dts --clean --format cjs,esm"
   },
   "dependencies": {
+    "@mua/nn": "workspace: *",
     "@mua/tensor": "workspace: *"
   }
 }
