--- a/packages/async-math/package.json
+++ b/packages/async-math/package.json
@@ -1,13 +1,11 @@
 {
   "name": "async-math",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "src/index.ts",
   "scripts": {
-    "dev": "tsup src/index.ts --watch --dts --clean --format cjs,esm",
-    "build": "tsup src/index.ts --dts --clean --format cjs,esm"
+    "test": "vitest"
   },
   "devDependencies": {
+    "@mua/common": "workspace: *",
     "mathjs": "^12.4.1"
   }
 }
