--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@antfu/eslint-config": "^2.8.3",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.11.30",
+    "@types/uuid": "^9.0.8",
     "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-plugin-format": "^0.1.0",
@@ -34,6 +35,11 @@
     "tsx": "^4.7.1",
     "turbo": "latest",
     "typescript": "^5.4.2",
+    "uuid": "^9.0.1",
+    "vite": "^5.2.10",
+    "vite-node": "^1.5.0",
+    "vite-plugin-top-level-await": "^1.4.1",
+    "vite-plugin-wasm": "^3.3.0",
     "vitest": "^1.4.0"
   }
 }
