--- a/packages/ndarray/Cargo.toml
+++ b/packages/ndarray/Cargo.toml
@@ -23,6 +23,7 @@ rand_distr = "0.4"
 rand = { version = "0.8" }
 getrandom = { version = "0.2", features = [ "js" ] }
 console_error_panic_hook = { version = "0.1.7", optional = true }
+image = "0.25"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
