--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@mua/demo",
+  "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -7,11 +8,6 @@
     "dev": "tsx --watch index.ts"
   },
   "dependencies": {
-    "@types/pngjs": "^6.0.4",
-    "canvas": "^2.11.2",
     "muajs": "workspace: *"
-  },
-  "devDependencies": {
-    "pngjs": "^7.0.0"
   }
 }
