--- a/apps/muajs/package.json
+++ b/apps/muajs/package.json
@@ -1,12 +1,6 @@
 {
   "name": "muajs",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "scripts": {
-    "dev": "tsup index.ts --watch --dts --clean --format cjs,esm",
-    "build": "tsup index.ts --dts --clean --format cjs,esm"
-  },
+  "main": "./index.ts",
   "dependencies": {
     "@mua/nn": "workspace: *",
     "@mua/tensor": "workspace: *"
