--- a/packages/ndarray/Cargo.toml
+++ b/packages/ndarray/Cargo.toml
@@ -24,10 +24,14 @@ rand = { version = "0.8" }
 getrandom = { version = "0.2", features = [ "js" ] }
 console_error_panic_hook = { version = "0.1.7", optional = true }
 image = "0.25"
+rayon = "1.10"
+rayon-core = "1.12"
+# wasm-bindgen-rayon = "1.2"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
-opt-level = "s"
+# opt-level = "s"
+lto = true
