--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -7,6 +7,8 @@
     "dev": "tsx --watch index.ts"
   },
   "dependencies": {
-    "muajs": "workspace: *"
+    "@mua/loader": "workspace: *",
+    "muajs": "workspace: *",
+    "ndarray-js": "workspace: *"
   }
 }
