--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "consola": "^3.2.3",
     "fp-ts": "^2.16.4",
     "lodash-es": "^4.17.21"
   },
